fix text align on table, update some content

--- a/css/style031016.css
+++ b/css/style031016.css
@@ -322,6 +322,10 @@ a.button:active,
   border:0;
 }
 
+.table td:nth-of-type(n + 2) {
+    text-align: center;
+}
+
 .warning {
   border:1px solid #ec252e;
   background:#ec252e;
